Add navbar with logo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <img src="./img//lambda-black.png" alt="Logo">
+        </nav>
+    </header>
     <div class="container">
    
         <section class="top-content">
