Add the anchor tags

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <header>
         <nav>
             <img src="./img//lambda-black.png" alt="Logo">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="#products">Products</a>
+            <a href="#blog">Blog</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
     <div class="container">
