Add banner image

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="#blog">Blog</a>
             <a href="#contact">Contact</a>
         </nav>
+        <img src="./img//jumbo.jpg" alt="Banner Image">
     </header>
     <div class="container">
    
