--- a/about.html
+++ b/about.html
@@ -21,43 +21,54 @@
       <a href="#blog">Blog</a>
       <a href="#contact">Contact</a>
     </nav>
-    <img src="./img//jumbo.jpg" alt="Banner Image" />
+    <img src="./img//jumbo-about.png" alt="Banner Image" />
   </header>
   <body>
     <div class="container about-page">
-      About Leverage agile frameworks to provide a robust synopsis for high
-      level overviews. Iterative approaches to corporate strategy foster
-      collaborative thinking to further the overall value proposition.
-      Organically grow the holistic world view of disruptive innovation via
-      workplace diversity and empowerment.
+      <article class="about">
+        <h3>About</h3>
+        <p>
+          Leverage agile frameworks to provide a robust synopsis for high level
+          overviews. Iterative approaches to corporate strategy foster
+          collaborative thinking to further the overall value proposition.
+          Organically grow the holistic world view of disruptive innovation via
+          workplace diversity and empowerment.
+        </p>
+      </article>
 
-      <img src="img/about-plan.png" alt="strategy" />
+      <hr />
+      <article class="about-list">
+        <img src="img/about-plan.png" alt="strategy" />
 
-      Strategy Iterative approaches to corporate strategy foster collaborative
-      thinking to further the overall value proposition. Learn More
+        Strategy Iterative approaches to corporate strategy foster collaborative
+        thinking to further the overall value proposition. Learn More
 
-      <img src="img/about-working.png" alt="strategy" />
+        <img src="img/about-working.png" alt="strategy" />
 
-      How We Work Iterative approaches to corporate strategy foster
-      collaborative thinking to further the overall value proposition. Learn
-      More
+        How We Work Iterative approaches to corporate strategy foster
+        collaborative thinking to further the overall value proposition. Learn
+        More
 
-      <img src="img/about-office.png" alt="strategy" />
+        <img src="img/about-office.png" alt="strategy" />
 
-      Places We Work Iterative approaches to corporate strategy foster
-      collaborative thinking to further the overall value proposition. Learn
-      More
+        Places We Work Iterative approaches to corporate strategy foster
+        collaborative thinking to further the overall value proposition. Learn
+        More
 
-      <img src="img/about-meeting.png" alt="strategy" />
+        <img src="img/about-meeting.png" alt="strategy" />
 
-      Collaboration Iterative approaches to corporate strategy foster
-      collaborative thinking to further the overall value proposition. Learn
-      More Let's Work Together Leverage agile frameworks to provide a robust
-      synopsis for high level overviews. Iterative approaches to corporate
-      strategy foster collaborative thinking to further the overall value
-      proposition. Organically grow the holistic world view of disruptive
-      innovation via workplace diversity and empowerment.
+        Collaboration Iterative approaches to corporate strategy foster
+        collaborative thinking to further the overall value proposition. Learn
+        More
+      </article>
 
+      <article class="lets-work">
+        Let's Work Together Leverage agile frameworks to provide a robust
+        synopsis for high level overviews. Iterative approaches to corporate
+        strategy foster collaborative thinking to further the overall value
+        proposition. Organically grow the holistic world view of disruptive
+        innovation via workplace diversity and empowerment.
+      </article>
       <footer>
         <nav>
           <a href="index.html">Home</a>
