--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
   </header>
   <body>
     <div class="container about-page">
-      <article class="about">
+      <article class="about-intro">
         <h3>About</h3>
         <p>
           Leverage agile frameworks to provide a robust synopsis for high level
