--- a/about.html
+++ b/about.html
@@ -38,28 +38,56 @@
 
       <hr />
       <article class="about-list">
-        <img src="img/about-plan.png" alt="strategy" />
+        <div>
+          <img src="img/about-plan.png" alt="strategy" />
 
-        Strategy Iterative approaches to corporate strategy foster collaborative
-        thinking to further the overall value proposition. Learn More
+          <h3>Strategy</h3>
+          <p>
+            Iterative approaches to corporate strategy foster collaborative
+            thinking to further the overall value proposition.
+          </p>
+          <button>Learn More</button>
+          <hr />
+        </div>
 
-        <img src="img/about-working.png" alt="strategy" />
+        <div>
+          <img src="img/about-working.png" alt="strategy" />
 
-        How We Work Iterative approaches to corporate strategy foster
-        collaborative thinking to further the overall value proposition. Learn
-        More
+          <h3>How We Work</h3>
+          <p>
+            Iterative approaches to corporate strategy foster collaborative
+            thinking to further the overall value proposition.
+          </p>
+          <button>Learn More</button>
+          <hr />
+        </div>
 
-        <img src="img/about-office.png" alt="strategy" />
+        <div>
+          <img src="img/about-office.png" alt="strategy" />
 
-        Places We Work Iterative approaches to corporate strategy foster
-        collaborative thinking to further the overall value proposition. Learn
-        More
+          <h3>
+            Places We Work
+          </h3>
+          <p>
+            Iterative approaches to corporate strategy foster collaborative
+            thinking to further the overall value proposition.
+          </p>
+          <button>Learn More</button>
+          <hr />
+        </div>
+        <div>
+          <img src="img/about-meeting.png" alt="strategy" />
 
-        <img src="img/about-meeting.png" alt="strategy" />
-
-        Collaboration Iterative approaches to corporate strategy foster
-        collaborative thinking to further the overall value proposition. Learn
-        More
+          <h3>
+            Collaboration
+          </h3>
+          <p>
+            Iterative approaches to corporate strategy foster collaborative
+            thinking to further the overall value proposition.
+          </p>
+          <button>Learn More</button>
+          <hr />
+        </div>
       </article>
 
       <article class="lets-work">
