--- a/about.html
+++ b/about.html
@@ -91,11 +91,12 @@
       </article>
 
       <article class="lets-work">
-        Let's Work Together Leverage agile frameworks to provide a robust
-        synopsis for high level overviews. Iterative approaches to corporate
-        strategy foster collaborative thinking to further the overall value
-        proposition. Organically grow the holistic world view of disruptive
-        innovation via workplace diversity and empowerment.
+        <h3>Let's Work Together</h3>
+        <p>Leverage agile frameworks to provide a robust synopsis for high level
+            overviews. Iterative approaches to corporate strategy foster
+            collaborative thinking to further the overall value proposition.
+            Organically grow the holistic world view of disruptive innovation via
+            workplace diversity and empowerment.</p>
       </article>
       <footer>
         <nav>
