--- a/about.html
+++ b/about.html
@@ -92,19 +92,21 @@
 
       <article class="lets-work">
         <h3>Let's Work Together</h3>
-        <p>Leverage agile frameworks to provide a robust synopsis for high level
-            overviews. Iterative approaches to corporate strategy foster
-            collaborative thinking to further the overall value proposition.
-            Organically grow the holistic world view of disruptive innovation via
-            workplace diversity and empowerment.</p>
+        <p>
+          Leverage agile frameworks to provide a robust synopsis for high level
+          overviews. Iterative approaches to corporate strategy foster
+          collaborative thinking to further the overall value proposition.
+          Organically grow the holistic world view of disruptive innovation via
+          workplace diversity and empowerment.
+        </p>
       </article>
       <footer>
         <nav>
           <a href="index.html">Home</a>
-          <a href="#">About</a>
-          <a href="#">Products</a>
-          <a href="#">Blog</a>
-          <a href="#">Contact</a>
+          <a href="about.html">About</a>
+          <a href="#products">Products</a>
+          <a href="#blog">Blog</a>
+          <a href="#contact">Contact</a>
         </nav>
       </footer>
     </div>
